[project]
name = "essex-toolkit"
description = "Essex Toolkit python libraries."
version = "0.0.5"
requires-python = ">=3.10"
authors = [
    { name = "Andres Morales", email = "andresmor@microsoft.com" },
    { name = "Chris Trevino", email = "chtrevin@microsoft.com" }, 
    { name = "Rodrigo Racanicci", email = "rracanicci@microsoft.com" }
]

[tool.uv.workspace]
members = ["python/*"]

[tool.uv]
dev-dependencies = [
		"poethepoet>=0.26.1",
		"mkdocs-material>=9.5.39",
		"mkdocs-monorepo-plugin>=1.1.0"
]

[tool.poe.tasks]
serve_docs = "mkdocs serve"
build_docs = "mkdocs build"

[tool.pytest.ini_options]
markers = [
	"azurite: mark test as requiring azurite"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"
addopts="--cov-config=.coveragerc --cov-report=html --cov-report=xml --cov-report=term-missing --cov-branch -m 'not azurite'"