[project]
name = "reactivedataflow"
version = "0.1.18"
description = "Reactive Dataflow Graphs"
license = {file = "LICENSE" }
authors = [{name="Chris Trevino", email="chtrevin@microsoft.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reactivex>=4.0.4",
    "networkx>=3.3",
    "pydantic>=2.7.4"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
    "poethepoet>=0.26.1",
    "pytest>=8.2.2",
    "pyright>=1.1.366",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "numpy<2",
    "pytest-asyncio>=0.23.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://github.com/microsoft/pyright/blob/9f81564a4685ff5c55edd3959f9b39030f590b2f/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
include = ["reactivedataflow", "reactivedataflow_tests"]
exclude = ["**/__pycache__"]

[tool.poe.tasks]
_sort_imports = "ruff check --select I --fix . --preview"
_ruff_check = 'ruff check . --preview'
_format_code = "ruff format  . --preview"
_format_check = 'ruff format . --check --preview'

typecheck = "pyright"
check_package_types = "pyright --verifytypes reactivedataflow --ignoreexternal"
check = ['_format_check', '_ruff_check', 'typecheck', 'check_package_types']
fix = "ruff  --preview check --fix ."
fix_unsafe = "ruff check --preview --fix --unsafe-fixes ."
format = ['_sort_imports', '_format_code']
test = "pytest reactivedataflow_tests"
test_coverage = "pytest reactivedataflow_tests --cov-fail-under=98"
test_only = "pytest -v -k"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"
addopts="--cov-config=.coveragerc --cov=reactivedataflow --cov-report=html --cov-report=xml --cov-report=term-missing --cov-branch"