[tool.poetry]
name = "typer-example"
version = "0.1.0"
description = ""
authors = ["Andres Morales <andresmor@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
essex-config = {path = "../../", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test-config = "typer_example.cli:app"